# django_react_ecommerce

backend/: .gitignore  pyproject.toml
backend/account/: admin.py  models.py  serializers.py  urls.py  views.py
backend/account/migrations/: 0001_initial.py
backend/cart/: admin.py  models.py  serializers.py  urls.py  views.py
backend/cart/migrations/: 0001_initial.py  0002_alter_cart_shipping_amount.py
backend/config/: settings.py  urls.py
backend/product/: admin.py  models.py  serializers.py  urls.py  views.py
backend/product/migrations/: 0001_initial.py  0002_alter_productcategory_parent.py
backend/seller/: admin.py  models.py
backend/seller/migrations/: 0001_initial.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/store/: auth.js
frontend/src/utils/: auth.js  axios.js
frontend/src/views/auth/: Login.jsx  Logout.jsx  Register.jsx
frontend/src/views/base/: StoreFooter.jsx  StoreHeader.jsx
frontend/src/views/shop/: Home.jsx
